MDEV-27270: Wrong query plan with Range Checked for Each Record and ORDER BY ... LIMIT

Followup to fix for MDEV-25858: When test_if_skip_sort_order() decides
to use an index to satisfy ORDER BY ... LIMIT clause, it should
disable "Range Checked for Each Record" optimization.

Do this in all cases.