sql/sql_select.cc
@@ -21986,7 +21986,15 @@ check_reverse_order:
       }
     }
     else if (select && select->quick)
+    {
+      /* Cancel "Range checked for each record" */
+      if (tab->use_quick == 2)
+      {
+        tab->use_quick= 1;
+        tab->read_first_record= join_init_read_record;
+      }
       select->quick->need_sorted_output();
+    }
 
     tab->read_record.unlock_row= (tab->type == JT_EQ_REF) ?
                                  join_read_key_unlock_row : rr_unlock_row;
